# structured-parse

./: .gitignore  LICENSE  README.md  SPEC.md  go.md  justfile  python.md  ts_js.md
go/: bench_test.go  blocks.go  go.mod  labels.go  parser.go  parser_test.go  validation.go  wasm.go  wasm_types.go  wasm_wasi.go
go/cmd/wasm/: main.go
go/cmd/wasm-wasi/: main.go
js/: package.json
justfiles/: go.just  js.just  python.just  ts.just
python/: README.md  benchmark.py  example.py  pyproject.toml
python/structured_parse/: __init__.py  parser.py  version.py
python/tests/: __init__.py  test_parser.py
test-assets/: basic_functionality_input.txt  basic_functionality_output.json  block_parsing_input.txt  block_parsing_output.json  json_and_malformed_errors.json  json_and_malformed_input.txt  json_and_malformed_output.json  mixed_case_multiline_input.txt  mixed_case_multiline_output.json  required_dependency_input.txt  required_dependency_output.json
ts/: example.ts  package-lock.json  package.json  tsconfig.json
ts/src/: benchmark.ts  index.ts  test.ts  types.ts
