[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "structured-parse"
version = "1.0.0"
description = "Multi-language library for parsing labeled/structured LLM output"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Keith Chester", email = "keith@hlfshell.com"}
]
keywords = ["llm", "parser", "structured-output", "wasm", "ai", "agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "build>=0.10.0",
]

[project.urls]
Homepage = "https://github.com/hlfshell/structured-parse"
Repository = "https://github.com/hlfshell/structured-parse"

[tool.setuptools.packages.find]
where = ["."]
include = ["structured_parse*"]

[tool.setuptools.package-data]
structured_parse = ["wasm/*.wasm"]

